# splatx

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json  vite.demo.config.ts  vite.lib.config.ts  wrangler.toml
.zed/: settings.json
demo/: index.html  main.ts  style.css
demo/public/model/: coffee_martini_S.npz  coffee_martini_poses_bounds.json  cook_spinach_S.npz  cook_spinach_poses_bounds.json
src/: camera.rs  lib.rs  model.rs  renderer.rs  triangle_render.rs  web.rs
src/render/: mod.rs
src/renderer/: alive_count.rs  appearance.rs  blit.rs  compact.rs  cull.rs  data.rs  debug_count.rs  indirect.rs  prefix_sum.rs  profiler.rs  project.rs  render.rs  sort.rs  util.rs
src/renderer/shader/: appearance.wgsl  blit.wgsl  compact.wgsl  cull.wgsl  gaussian.wgsl  indirect.wgsl  prefix_sum_add_carry.wgsl  prefix_sum_add_carry_fallback.wgsl  prefix_sum_block_scan.wgsl  prefix_sum_block_scan_fallback.wgsl  project.wgsl  sort.wgsl
src/shader/: triangle.wgsl
tool/: convert-omg4ftgs-to-splatx.py  inspect-omg4ftgs-xz.py  poses_bounds_npy_to_json.py  pyproject.toml
ts/: index.ts  worker.ts
