[package]
name = "splatx"
version = "0.1.0"
authors = ["xj63 <xj63work@163.com>"]
edition = "2024"
description = "3D & 4D Gaussian Splat renderer based on wgpu."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web", "preview"]
web = [
    "dep:wasm-bindgen",
    "dep:tracing-wasm",
    "dep:console_error_panic_hook",
    "dep:js-sys",
    "dep:web-sys",
    "dep:wasm-bindgen-futures",
]
preview = ["dep:winit", "dep:pollster", "dep:tracing-subscriber"]

[[bin]]
name = "preview"
required-features = ["preview"]

[[bin]]
name = "inspect-npz"
path = "src/bin/inspect_npz.rs"

[dependencies]
glam = "0.32.1"
wgpu = "29.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", optional = true, features = [
    "env-filter",
] }

winit = { version = "0.30.13", optional = true }
pollster = { version = "0.4.0", optional = true }
wasm-bindgen = { version = "0.2.121", optional = true }
wasm-bindgen-futures = { version = "0.4.71", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
tracing-wasm = { version = "0.2.1", optional = true }
js-sys = { version = "0.3.98", optional = true }
web-sys = { version = "0.3.98", optional = true, features = [
    "HtmlCanvasElement",
    "OffscreenCanvas",
] }
half = "2.7.1"
ndarray-npy = "0.10.0"
ndarray = "0.17.2"
py_literal = "0.4"
